--- a/simple_java2/pom.xml
+++ b/simple_java2/pom.xml
@@ -12,11 +12,39 @@
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
+  <scm>
+    <connection>scm:git:https://github.com/Sravya25/Mavenpracticeform.git</connection>
+    <developerConnection>scm:git:https://github.com/Sravya25/Mavenpracticeform.git</developerConnection>
+  </scm>
+
+<distributionManagement>
+    <repository>
+    <id>releases</id>
+    <url>http://192.168.233.129:8080/nexus-2.14.8-01/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+    <id>snapshots</id>
+    <url>http://192.168.233.129:8080/nexus-2.14.8-01/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+      </plugin>
+    </plugins>
+  </build>
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+
 
   <dependencies>
     <dependency>
