--- a/simple_java2/pom.xml
+++ b/simple_java2/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.sonatype.mavenbook</groupId>
   <artifactId>simple_java2</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>simple_java2</name>
   <!-- FIXME change it to the project's website -->
@@ -15,6 +14,7 @@
   <scm>
     <connection>scm:git:https://github.com/Sravya25/Mavenpracticeform.git</connection>
     <developerConnection>scm:git:https://github.com/Sravya25/Mavenpracticeform.git</developerConnection>
+    <tag>1.0_tag</tag>
   </scm>
 
 <distributionManagement>
