--- a/simple_java2/pom.xml
+++ b/simple_java2/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.sonatype.mavenbook</groupId>
   <artifactId>simple_java2</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
 
   <name>simple_java2</name>
   <!-- FIXME change it to the project's website -->
@@ -14,7 +14,7 @@
   <scm>
     <connection>scm:git:https://github.com/Sravya25/Mavenpracticeform.git</connection>
     <developerConnection>scm:git:https://github.com/Sravya25/Mavenpracticeform.git</developerConnection>
-    <tag>1.0_tag</tag>
+    <tag>HEAD</tag>
   </scm>
 
 <distributionManagement>
