--- a/simple_java2/pom.xml
+++ b/simple_java2/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.sonatype.mavenbook</groupId>
   <artifactId>simple_java2</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
 
   <name>simple_java2</name>
   <!-- FIXME change it to the project's website -->
